align header and fix body whitespace on resize

--- a/Hack_NCStateCSS.css
+++ b/Hack_NCStateCSS.css
@@ -162,6 +162,7 @@ canvas {
 #header {
   color: white;
   padding-bottom: 2rem;
+  align-items: center;
 }
 
 #banner-logo {
@@ -186,6 +187,14 @@ canvas {
 section {
   background-color: white;
   padding-bottom: 80px;
+  width: auto;
+  width: 105%;
+}
+
+.content-body {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: white;
 }
 
 section:first-of-type {
@@ -340,6 +349,9 @@ section:first-of-type {
 @media only screen and (min-width: 1500px) {
   #sideNav {
     display: block !important;
+  }
+  #details {
+    margin-top: -225px;
   }
 }
 
